--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -126,6 +126,10 @@
 \cfoot{Daniel Bersenkowitsch \\\pagemark}
 \subfile{bersenkowitsch_Promotions} 
 
+\newpage
+\cfoot{Daniel Bersenkowitsch, Andreas Denkmayr, Gerald Irsiegler \\\pagemark}
+\subfile{all_fazit} 
+
 \cfoot{\pagemark}
 \newpage
 \lstlistoflistings
