--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
@@ -50,7 +50,7 @@ So sehen diese Zitierungen in einem generierten PDF aus:
 \end{figure}
 \ \\
 Um dieses Ergebnis zu erreichen ist es notwendig das Programm biber.exe zu starten bevor eine PDF generiert wird.
-Dieses Programm sucht und ordnet alle angeforderten Zitierungen und fügt diese in den Text ein.
+Dieses Programm sucht, ordnet und fügt alle angeforderten Zitierungen in den Text ein.
 
 
 %\ \\
