Added german abstract

--- a/FIPLY/Dokumente/FIPLY Latex/all_fazit.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_fazit.tex
@@ -3,17 +3,25 @@
 %\author{all}
 
 \begin{document}
+\ \\
 Die Arbeit an der Diplomarbeit hat uns viele wertvolle Lektionen erteilt.
-Kommunikation ist einer der wichtigsten Aspekte wenn man ein Projekt im Rahmen einer Gruppe durchführt. 
-Regelmäßige Besprechungen mit den anderen Mitgliedern ist essentiel um die Entwicklung so effizient wie möglich zu gestalten.
+Kommunikation ist der wichtigste Aspekte einer Gruppenarbeit. 
+Regelmäßige Besprechungen unter den Teammitgliedern waren essentiel um die Entwicklung so effizient wie möglich zu gestalten.
 
-Protokollierung der Besprechungen, ob mit den anderen Projektmitgliedern oder dem Betreuungslehrer ist extrem wichtig, um zu garantieren das wichtige Details nicht in Vergessenheit geraten.
+\ \\
+Protokolle der Besprechungen, ob mit den anderen Projektmitgliedern oder dem Betreuungslehrer sind extrem wichtig, um zu garantieren, dass wichtige Abmachungen nicht in Vergessenheit geraten.
 
-Wir stellten fest dass die Planung des Projektes/Diplomarbeit viel wichtiger ist als vorerst angenommen. 
-Eine genaue und detailreiche Planung erleichtigt die Implementierung um ein Vielfaches.Wenn die Planung genau und detailreich erledigt wird ist die Implementierung um einiges einfacher.
+\ \\
+Wir stellten fest, dass die Planung des Projektes/Diplomarbeit viel wichtiger ist, als vorerst angenommen. 
+Eine genaue und detailreiche Planung erleichtigt die Implementierung um ein Vielfaches.
+Dennoch stellte sich heraus, dass der \grqq{}Quick and Dirty Approach\grqq{} ein produktive Arbeitshaltung für unser Projektteam darstellte.
+Funktionen wurden zu Beginn nur so simple wie nötig implementiert und erst im Nachinein aufgehübscht.
+Auf diese Weise wurde nur selten über das Ziel hinausgeschossen und wir als Team bleiben motiviert, da schnell Fortschritte erzielt wurden. 
 
-Das Fachgebiet Fitness wurde uns während der Planung sehr viel näher gebracht. Während der engen Zusammenarbeit mit unserem Auftraggeber und Fitnessconsultant David Lindenbauer lernten wir viele neue Übungen kennen und erfuhren was für ein gutes Training wichtig ist.
+\ \\
+Während der engen Zusammenarbeit mit unserem Auftraggeber und Fitnessconsultant David Lindenbauer erhielten wir einen Einblick in das Fachgebiet der Fitness. Dies war eine wertvolle Erfahrung für uns und schaffte Motivation die Übungen und Trainingsmethoden der App auch im Selbstversuch anzuwenden.
 
-Zusammenfassend war die Diplomarbeit für jedes Teammitglied eine einzigartige Chance zur Fortbildung, eine teamgeiststärkendes Projekt und Riesenerfolg in allen Aspekten.
+\ \\
+Zusammenfassend war die Diplomarbeit für jedes Teammitglied eine einzigartige Chance zur Fortbildung, eine teamgeiststärkendes Projekt und ein Riesenerfolg in allen Aspekten. 
 
 \end{document}
