--- a/FIPLY/Dokumente/FIPLY Latex/all_autoren.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_autoren.tex
@@ -7,7 +7,7 @@
 	\line(1,0){390}
 	\ \\
 	\ \\
-	Alle Autoren der Diplomarbeit gehen in die HTBLA-Leonding und besuchen die 5. Schulstufe des Informatik-Zweiges.
+	Alle Autoren dieser Diplomarbeit besuchen die 5. Schulstufe des Informatik-Zweiges der HTBLA-Leonding.
 	\ \\
 	\newline\newline
 	{\Large Daniel Bersenkowitsch}
