--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -3,7 +3,6 @@
 %\author{Daniel Bersenkowitsch}
 
 \begin{document}
-
 	\subsection{Begriffserklärung}
 	Eine \grqq{}Wiederholung\grqq{} ist das 1-malige Ausüben einer Übung. 
 	\newline
@@ -30,9 +29,10 @@
 	\subsection{Phase 1: Allgemein}
 	Phase 1 ist für jeden gleich, unabhängig vom Trainingsziel, und dient dem Eintrainieren. Am Anfang wird festgehalten, ob der Benutzer einen untrainierten oder bereits trainierten Körper besitzt. Anhand dessen und dem ausgewählten Schema (Bauch - Beine - Po, Oberkörper/Arme, Stabilisation (R"ucken \& Gesundheit)) werden in dieser Phase die "Ubungen ausgewählt und die Anzahl der S"atze/Wiederholungen bestimmt:
 	\begin{center}
+		\def\arraystretch{1.2}%
 		\begin{tabular}{| l || l | l |}
 			\hline
-			 & Anfänger & Fortgeschrittener\\
+			 & \textbf{Anfänger} &\textbf{ Fortgeschrittener}\\
 			\hline
 			
 			Baum - Beine - Po &  
@@ -78,6 +78,7 @@
 	\newline
 	Im "Uberblick:
 		\begin{center}
+			\def\arraystretch{1.3}%
 			\begin{tabular}{| l | l |}
 				\hline
 				"Ubungen: & 6 bis 9 \\ \hline 
@@ -96,6 +97,7 @@
 	Also im "Uberblick:
 	\newline
 	\begin{center}
+		\def\arraystretch{1.3}%
 		\begin{tabular}{| l | l |}
 			\hline
 			1. Teil&Phase 1: Allgemein \\
@@ -110,6 +112,7 @@
 		\end{tabular} 
 	\end{center}
 	\begin{center}
+		\def\arraystretch{1.3}%
 		\begin{tabular}{| l || l | l |}
 			\hline
 			 2. Teil & Phase 2: Muskelaufbau & Stabilit"ats"ubungen\\
@@ -134,6 +137,7 @@
 	Im "Uberblick:
 	\newline
 	\begin{center}
+		\def\arraystretch{1.3}%		
 		\begin{tabular}{| l || l | l |}
 			\hline
 			& Muskelaufbau & Kraftausdauer \\ \hline
@@ -158,6 +162,7 @@
 	\newline
 	Im "Uberblick:
 		\begin{center}
+			\def\arraystretch{1.3}%
 			\begin{tabular}{| l | l |}
 				\hline
 				"Ubungen: & 6 \\ \hline 
@@ -181,6 +186,7 @@
 	\newline
 	Im "Uberblick: 
 		\begin{center}
+			\def\arraystretch{1.3}%
 			\begin{tabular}{| l | l |}
 				\hline
 				"Ubungen: & 6 \\ \hline 
@@ -198,17 +204,54 @@
 	Die Mobilisation beim Maximalkrafttraining dient dazu, den K"orper auf das kommende schwere Training vorzubereiten. 
 	Sie besteht aus:
 			\begin{center}
-				\begin{tabular}{| l | l |}
+				\begin{tabular}{ p{5cm} | p{8cm} }
 					\hline
-					\textbf{Mobilisation} & \textbf{Beschreibung} \\ \hline \hline
-					Hals & \pbox{10cm}{Den Kopf im Wechsel nach rechts und links drehen.}\\ \hline 
-					Schulter & \pbox{10cm}{Die Arme neben dem Körper hängen lassen und mit den\newline Schultern nach rückwärts kreisen.}\\ \hline
-					Ellbogen & \pbox{10cm}{Die Hände auf die Schulter legen, mit den Ellbogen vorwärts und rückwärts kreisen, die Schultern dabei nach hinten und unten bewegen.}\\ \hline
-					Handgelenk & \pbox{10cm}{Hände kreisen, beide Hände gleichzeitig mit größtmöglichem Bewegungsumfang fortlaufend um die eigene Achse drehen.}\\ \hline
-					Becken-Mob & \pbox{10cm}{Die Arme über den Köpf führen, Handflächen nach oben schieben, Schultern bleiben tief, das Becken im Uhrzeigersinn, den ganzen Bewegungsumfang ausnutzen, Richtung ändern, die Kreise aus der Hüfte führen, die Beine sind stabil.}\\ \hline
-					Wirbelsäule – Seitneigung & \pbox{10cm}{Linken Arm seitwärts hoch heben über den Kopf und Wirbelsäule seitwärts beugen, gegengleich, Handflächen nach oben.}\\ \hline
-					Wirbelsäule – Rotation & \pbox{10cm}{Bauchnabel nach innen ziehen, die Arme in U-Form anheben, Daumen zeigen nach hinten und sind leicht nach außen gedreht, den Oberkörper vorbeugen, Gesäß nach hinten und zur Seite drehen, zur Mitte kommen, zur anderen Seite drehen, zur Mitte, immer im Wechsel, der Rücken bleibt gestreckt, die Schulterblätter sind zusammengezogen, das Becken bleibt stabil.}\\ \hline
-					Wirbelsäule – Rolldown & \pbox{10cm}{Aufrechter Stand, den Kopf Richtung Brustbein senken, Bauchnabel nach innen ziehen, einatmen und beim Ausatmen die Wirbelsäule Wirbel für Wirbel in Richtung Boden abrollen , einatmen und wieder Wirbel für Wirbel aufrollen, der Rücken ist locker, der Nacken ist entspannt.}\\ \hline
+					\ \\
+					\textbf{Mobilisation} & \textbf{Beschreibung}     
+					\\ \hline \hline
+					\ \\ 
+					Becken-Mob & \pbox{10cm}{Die Arme über den Köpf führen, Handflächen \newline nach oben schieben, Schultern bleiben tief, \newline das Becken im Uhrzeigersinn, den ganzen \newline Bewegungsumfang ausnutzen, Richtung \newline ändern, die Kreise aus der Hüfte führen, die \newline Beine sind stabil.}
+					\ \\ 
+					\\ \hline
+					\ \\
+					Wirbelsäule – Seitneigung & \pbox{10cm}{Linken Arm seitwärts hoch heben über den \newline Kopf und Wirbelsäule seitwärts beugen, \newline gegengleich, Handflächen nach oben.}
+					\ \\ 
+					\ \\
+					\hline
+					\ \\
+					Wirbelsäule – Rotation & \pbox{10cm}{Bauchnabel nach innen ziehen, die Arme in \newline U-Form anheben, Daumen zeigen nach hinten \newline und sind leicht nach außen gedreht, den \newline Oberkörper vorbeugen, Gesäß nach hinten \newline und zur Seite drehen, zur Mitte kommen, zur \newline anderen Seite drehen, zur Mitte, immer im \newline Wechsel, der Rücken bleibt gestreckt, die \newline Schulterblätter sind zusammengezogen, \newline das Becken bleibt stabil.}
+					\ \\ 
+					\\ \hline
+					\ \\
+					Wirbelsäule – Rolldown & \pbox{10cm}{Aufrechter Stand, den Kopf Richtung \newline Brustbein senken, Bauchnabel nach innen \newline ziehen, einatmen und beim Ausatmen die \newline Wirbelsäule Wirbel für Wirbel in Richtung \newline Boden abrollen, einatmen und wieder Wirbel \newline für Wirbel aufrollen, der Rücken ist locker, \newline der Nacken ist entspannt.}
+					\ \\
+					\\ \hline
+				\end{tabular} 
+			\end{center}
+			\begin{center}
+				\begin{tabular}{ p{5cm} | p{8cm} }
+					\hline
+					\ \\
+					\textbf{Mobilisation} & \textbf{Beschreibung}     
+					\\ \hline \hline
+					\ \\
+					Hals & \pbox{10cm}
+					{Den Kopf im Wechsel nach rechts und links \newline drehen.}
+					\ \\ 
+					\\ \hline
+					\ \\ 					
+					Schulter & \pbox{10cm}{Die Arme neben dem Körper hängen lassen \newline und mit den Schultern nach rückwärts kreisen.}
+					\ \\ 
+					\\ \hline
+					\ \\
+					Ellbogen & \pbox{10cm}{Die Hände auf die Schulter legen, mit den\newline Ellbogen vorwärts und rückwärts kreisen, \newline die Schultern dabei nach hinten und unten \newline bewegen.}
+					\ \\ 
+					\\ \hline
+					\ \\ 
+					Handgelenk & \pbox{10cm}{Hände kreisen, beide Hände gleichzeitig mit \newline größtmöglichem Bewegungsumfang \newline fortlaufend um die eigene Achse drehen.}
+					\ \\ 
+					\\ \hline
+					\ \\ 
 				\end{tabular} 
 			\end{center}
 
