--- a/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
@@ -23,28 +23,29 @@
 %	\ \\
 %	In the course of the mandatory thesis of Daniel Bersenkowitsch, Andreas Denkmayr and Gerald Irsiegler, a fitness planning %app is being developed for the customer David Lindenbauer. Currently Mr. Lindenbauer has to create each individual workout plan %by hand. This is a very timeconsuming process, that can theoretically be automated. To save time we are developing an application %which generates workout plans based on the needs and wants of the trainees. Additionally the application helps with the training %itself and features an exercise catalog to refer to.
 
-\section{Kurzfassung in Deutsch}
+\section{Kurzfassung}
 Im Rahmen der Diplomarbeit von Daniel Bersenkowitsch, Andreas Denkmayr und Gerald Irsiegler, wird eine Android-Applikation entwickelt, die es dem Benutzer ermöglicht, einen individuellen Trainingsplan zu erstellen und zu verwalten.
 Das Fachwissen rund um Übungen, Trainingsroutinen und der Trainingsplanerstellung werden von unserem Auftraggeber und Fitnessconsultant David Lindenbauer bereitgestellt.
 
 \ \\
 Derzeit müssen Fitnesslaien einen Personal Trainer aufsuchen oder sich mit einem Fitnessplan begnügen, der nicht auf ihre Bedürfnisse zurechtgeschnitten ist. Genau hier setzt unsere Diplomarbeit an. FIPLY ermöglicht auch unerfahrenen Benutzern einen einfachen Einstieg ins Training. Der Benutzer kann sofort in ein Training einsteigen und die App austesten.
-Um den Trainingserfolg zu maximieren, wird dem Benutzer empfohlen das sein Profil an seine Bedürfnisse anpassen.
-Mit dem ausgewählten Traingsziel und Daten über die Fitness des Benutzers wird ein Plan erstellt der perfekt auf den User zugeschnitten ist.
+Um den Trainingserfolg zu maximieren, wird dem Benutzer empfohlen, sein Profil an seine Bedürfnisse anzupassen.
+Mittels Benutzerdaten und dem ausgewählten Trainingsziel, wird ein Plan erstellt, der perfekt auf den User zugeschnitten ist.
 
 \ \\
-Zusätzlich zur Erstellung von Traingsplänen bietet unsere App eine wertvolle Ressource für Übungen und Tipps bei deren Ausführung. Der Benutzer wählt eine Muskelgruppe aus, indem er auf das jeweilige Körperteil eines Strichmännchens klickt. Nun wird ihm eine Liste von Übungen angezeigt, die diese Muskelgruppe trainieren.
+Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App eine wertvolle Ressource für Übungen und Tipps bei deren Ausführung. Der Benutzer wählt eine Muskelgruppe aus, indem er auf das jeweilige Körperteil eines Strichmännchens klickt. 
+Nun wird ihm eine Liste von Übungen angezeigt, die diese Muskelgruppe trainieren.
 
 \ \\
-Während dem Training wird der Benutzer beim Trainieren begleitet. Es werde ihm die Übungen angezeigt die für diesen Traingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen ohne die App verlassen zu müssen.  
-Während dem Ablauf der Trainingssession wird der Benutzer durch die Musik begleitet, die er auf seinem Smartphone gespeichert hat.
+Während dem Training wird der Benutzer beim Trainieren begleitet. Es werden ihm die Übungen angezeigt, die für diesen Trainingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen, ohne die App verlassen zu müssen.  
+Während dem Ablauf der Trainingssession, wird der Benutzer durch die Musik begleitet, die er auf seinem Smartphone gespeichert hat.
 Es lassen sich Playlisten, aus allen auf dem Gerät gespeicherten Songs, erstellen. Diese lassen sich komfortabel während dem Training auswählen und abspielen.
 
 \ \\
 Aus allen abgeschlossenen Trainingssessions werden Statistiken erstellt und dem Benutzer präsentiert.
 Auf diese Weise kann der Nutzer seine Entwicklung verfolgen. 
 
-
+\section{Abstract}
 
 
 
