--- a/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
@@ -28,16 +28,15 @@ Im Rahmen der Diplomarbeit von Daniel Bersenkowitsch, Andreas Denkmayr und Geral
 Das Fachwissen rund um Übungen, Trainingsroutinen und der Trainingsplanerstellung werden von unserem Auftraggeber und Fitnessconsultant David Lindenbauer bereitgestellt.
 
 \ \\
-Derzeit müssen Fitnesslaien einen Personal Trainer aufsuchen oder sich mit einem Fitnessplan begnügen, der nicht auf ihre Bedürfnisse zurechtgeschnitten ist. Genau hier setzt unsere Diplomarbeit an. FIPLY ermöglicht auch unerfahrenen Benutzern einen einfachen Einstieg ins Training. Der Benutzer kann sofort in ein Training einsteigen und die App austesten.
+Derzeit müssen Fitnesslaien einen Personal Trainer aufsuchen oder sich mit einem Fitnessplan begnügen, der nicht auf ihre Bedürfnisse zurechtgeschnitten ist. Genau hier setzt unsere Diplomarbeit an. FIPLY ermöglicht auch unerfahrenen Benutzern einen einfachen Einstieg ins Training. Der Benutzer kann sofort in das Training einsteigen und die App austesten.
 Um den Trainingserfolg zu maximieren, wird dem Benutzer empfohlen, sein Profil an seine Bedürfnisse anzupassen.
 Mittels Benutzerdaten und dem ausgewählten Trainingsziel, wird ein Plan erstellt, der perfekt auf den User zugeschnitten ist.
 
 \ \\
-Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App eine wertvolle Ressource für Übungen und Tipps bei deren Ausführung. Der Benutzer wählt eine Muskelgruppe aus, indem er auf das jeweilige Körperteil eines Strichmännchens klickt. 
-Nun wird ihm eine Liste von Übungen angezeigt, die diese Muskelgruppe trainieren.
+Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App wertvolle Ressourcen für Übungen und Tipps bei deren Ausführung. Im Übungskatalog findet man alle Übungen, diese können auch nach Name und Muskelgruppe gefiltert werden.
 
 \ \\
-Während dem Training wird der Benutzer beim Trainieren begleitet. Es werden ihm die Übungen angezeigt, die für diesen Trainingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen, ohne die App verlassen zu müssen.  
+Der Benutzer wird von der App durch das Training begleitet. Es werden ihm die Übungen angezeigt, die für diesen Trainingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen, ohne die App verlassen zu müssen.  
 Während dem Ablauf der Trainingssession, wird der Benutzer durch die Musik begleitet, die er auf seinem Smartphone gespeichert hat.
 Es lassen sich Playlisten, aus allen auf dem Gerät gespeicherten Songs, erstellen. Diese lassen sich komfortabel während dem Training auswählen und abspielen.
 
@@ -46,6 +45,26 @@ Aus allen abgeschlossenen Trainingssessions werden Statistiken erstellt und dem 
 Auf diese Weise kann der Nutzer seine Entwicklung verfolgen. 
 
 \section{Abstract}
+As part of the thesis of Daniel Bersenkowitsch, Andreas Denkmayr and Gerald Irsiegler, an Android application is developed, which allows the user to create and manage an individual training plan.
+The expertise around exercises, workout routines and the training plan will be provided by our client and Fitness Consultant David Lindenbauer.
+
+\ \\
+Currently Fitness laymen need to see a personal trainer or use a fitness plan that is not cut to their needs. This is where our application comes in. FIPLY allows even novice users a simple approach to training. The user can immediately start training and test the app.
+To maximize the success of training, the user is encouraged to adapt his user-profile to his needs.
+With the data provided by the user and the selected training goal, a plan is created, which is perfectly tailored to the user.
+
+\ \\
+In addition to creating training plans, our app is a valuable resource for exercises and their execution.
+The exercise catalog includes all available exercises and you can filter them by name or muscle group.
+
+\ \\
+The user is also accompanied during his workout session by showing him the exercises which are scheduled for this day. In addition, it includes a countdown timer and a stopwatch. This way, the user can measure his rest- or training sessions, without leaving the app.
+During the training session, the user is accompanied by music that he has stored on his smartphone.
+Playlists can be created with all the songs stored on the device. These can be conveniently selected and played during the training.
+
+\ \\
+For all completed training sessions statistics are compiled and presented to the user.
+This way, the user can track his development.
 
 
 
