--- a/FIPLY/Dokumente/FIPLY Latex/all_pflichtenheft.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_pflichtenheft.tex
@@ -13,7 +13,7 @@
 	Die Applikation kann von jedem benutzt werden, der körperlich aktiv sein will. Der Benutzer lädt sich die Applikation vom Google PlayStore herunter, gibt sein persönliches Profil und Trainingsziel an und erhält seinen angepassten Trainingsplan. Die App kann sowohl zu Hause als auch im Fitness-Studio verwendet werden. Nach jeder Trainingseinheit werden seine Fortschritte vermerkt und können eingesehen werden.
 	
 	\subsubsection{Zielbestimmung}
-	Der User soll bei dem Verfolgen seiner Ziele (Muskelaufbau, Gesundheit, Kraftausdauer) durch die App unterstützt werden.
+	Der User soll beim Verfolgen seiner Ziele (Muskelaufbau, Gesundheit, Kraftausdauer) durch die App unterstützt werden.
 	
 	\subsection{Funktionale Anforderungen}
 	Die persönlichen Profildaten werden beim ersten Öffnen der Applikation erfasst. Der Benutzer kann jederzeit einen Trainingskatalog einsehen, in dem alle Übungen grafisch nach Muskelgruppen sortiert sind. Jede Übung besitzt eine detaillierte Beschreibung, Anleitung und ein Video der Ausführung. Sobald man alle nötigen Informationen angegeben hat, ist es möglich einen Trainingsplan generieren zu lassen, welcher  als Excel-Tabelle abgespeichert und verschickt werden kann. Wenn man zu trainieren beginnen möchte, kann man eine Trainingssession starten. Dabei gibt es einen eingebauten Musikplayer, der die lokale Musikbibliothek wiedergibt. Die aktuelle Übung wird angezeigt und weiters steht ein Timer zur Verfügung, der vor allem beim Konditionstraining zum Einsatz kommt. Nach jedem Trainingsablauf soll der Benutzer ein Feedback geben, um seine Fortschritte zu vermerken. Die Fortschritte können jederzeit eingesehen und auf Social Networks geteilt werden. Zusätzlich werden einmal wöchentlich Userdaten (z.B.: Gewicht und Gesundheitszustand) abgefragt, um seine Entwicklung akkurat darstellen zu können.
@@ -23,7 +23,7 @@
 		\begin{subfigure}[b]{0.3\textwidth}
 			\centering
 			%\includegraphics[scale=0.5]{img/UseCaseDiagram}
-			\includegraphics[scale=0.6]{img/Systemarchitektur}
+			\includegraphics[scale=0.85]{img/Systemarchitektur}
 		\end{subfigure}
 		\caption{Das Use-Case Diagramm zu der Applikation}
 	\end{figure}
@@ -82,7 +82,7 @@
 		\ \\
 	\begin{center}	
 		\def\arraystretch{1.3}%
-		\begin{tabular}{| p{4cm} |  p{4cm} |  p{4cm} |}
+		\begin{tabular}{| p{3cm} |  p{3cm} |  p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Nutzer} & \textbf{Beschreibung der Aktivität}
 			\\ \hline 
@@ -104,7 +104,7 @@
 		\ \\
 	\begin{center}
 		\def\arraystretch{1.3}%
-		\begin{tabular}{| p{5cm} | p{5cm} |}
+		\begin{tabular}{| p{5cm} | p{6cm} |}
 			\hline
 		    UseCase 2: & Trainingsplan
 			\\ \hline 
@@ -157,7 +157,7 @@
 	Szenario für den Standardablauf: (Erfolg)
 	\begin{center}
 		\def\arraystretch{1.3}%	
-		\begin{tabular}{| p{4cm} | p{4cm} | p{4cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Nutzer} & 
 			\textbf{Beschreibung der Aktivität} 
@@ -174,7 +174,7 @@
 		\ \\
 	\begin{center}
 		\def\arraystretch{1.3}%	
-		\begin{tabular}{| p{2cm} | p{4cm} | p{4cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Bedingung, unter der Alternative eintritt} & \textbf{Beschreibung der Aktivität} 
 			\\ \hline 
@@ -221,7 +221,7 @@
 	Szenario für den Standardablauf: (Erfolg)
 	\begin{center}	
 		\def\arraystretch{1.3}%
-		\begin{tabular}{| p{4cm} | p{4cm} | p{4cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Nutzer} & \textbf{Beschreibung der Aktivität}  \\ \hline 
 			1: Der Benutzer will den Trainingsplan exportieren. & Der Benutzer der App. & Der Trainingsplan wird als Excel-Tabelle exportiert.\\ \hline
@@ -232,7 +232,7 @@
 	Szenarien für alternative Abläufe (Misserfolg oder Umwege zum Erfolg)
 	\begin{center}
 		\def\arraystretch{1.3}%	
-		\begin{tabular}{| p{4cm} | p{4cm} | p{4cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Bedingung, unter der Alternative eintritt} & \textbf{Beschreibung der Aktivität}  \\ \hline 
 			2: Email angeben & Irrtum des Benutzers. & In das Email Textfeld wird eine nicht formatkorrekte Email angegeben.\\ \hline
@@ -299,13 +299,13 @@
 	Szenario für den Standardablauf: (Erfolg)
 	\begin{center}	
 		\def\arraystretch{1.3}%	
-		\begin{tabular}{| p{4cm} | p{3cm} | p{5cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Nutzer} & \textbf{Beschreibung der Aktivität}  \\ \hline 
 			1: Starten des Musikplayers. & Der Benutzer der App. & Die Applikation spielt ein Lied aus der lokalen Musikbibliothek ab.\\ \hline
 			2: Ausführen der Übungen. & Der Benutzer der App. & Der Benutzer führt nun die anstehenden Übungen aus. \\ \hline
 			3: Eine Übung abschließen. & Der Benutzer der App. & Sobald eine Übung abgeschlossen ist, kann er per Knopfdruck zur nächsten Übung springen.  \\ \hline
-			4: Trainingseinheit abschließen. & Der Benutzer der App. & Wenn alle Übungen abgeschlossen sind und der „Trainingsession beenden“-Knopf gedrückt wurde, wird sein Trainingserfolg wiedergegeben.  \\ \hline
+			4: Trainingseinheit abschließen. & Der Benutzer der App. & Wenn alle Übungen abgeschlossen sind und der „Trainingssession beenden“-Knopf gedrückt wurde, wird sein Trainingserfolg wiedergegeben.  \\ \hline
 		\end{tabular} \\
 	\end{center}
 	\ \\
@@ -313,7 +313,7 @@
 	\ \\
 	\begin{center}	
 		\def\arraystretch{1.3}%	
-		\begin{tabular}{| p{4cm} | p{4cm} | p{4cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Bedingung, unter der Alternative eintritt} & \textbf{Beschreibung der Aktivität}  \\ \hline 
 			Es wird eine Übung angeklickt. & Der Benutzer kennt die Übung nicht oder will sie einsehen. & Die Übung wird während einer Trainingseinheit angeklickt und die Details dazu werden geöffnet.\\ \hline
@@ -364,7 +364,7 @@
 	\ \\
 	\begin{center}	
 		\def\arraystretch{1.3}%	
-		\begin{tabular}{| p{4cm} | p{4cm} | p{4cm} |}
+		\begin{tabular}{| p{3cm} | p{3cm} | p{6cm} |}
 			\hline
 			\textbf{Schritt} & \textbf{Nutzer} & \textbf{Beschreibung der Aktivität}  \\ \hline 
 			1: Einsehen der Fortschritte. & Der Benutzer der App. & Anzeige der Momentanaufnahmen aus den Trainingssessions.\\ \hline
