--- a/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
@@ -37,12 +37,15 @@ Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App wertvolle Ress
 
 \ \\
 Der Benutzer wird von der App durch das Training begleitet. Es werden ihm die Übungen angezeigt, die für diesen Trainingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen, ohne die App verlassen zu müssen.  
-Während dem Ablauf der Trainingssession, wird der Benutzer durch die Musik begleitet, die er auf seinem Smartphone gespeichert hat.
-Es lassen sich Playlisten, aus allen auf dem Gerät gespeicherten Songs, erstellen. Diese lassen sich komfortabel während dem Training auswählen und abspielen.
+Während des Ablaufs der Trainingssession, wird der Benutzer durch die Musik begleitet, die er auf seinem Smartphone gespeichert hat.
+Es lassen sich Playlists, aus allen auf dem Gerät gespeicherten Songs, erstellen. Diese lassen sich komfortabel während des Trainings auswählen und abspielen.
 
 \ \\
 Aus allen abgeschlossenen Trainingssessions werden Statistiken erstellt und dem Benutzer präsentiert.
 Auf diese Weise kann der Nutzer seine Entwicklung verfolgen. 
+
+
+
 
 \section{Abstract}
 As part of the thesis of Daniel Bersenkowitsch, Andreas Denkmayr and Gerald Irsiegler, an Android application is developed, which allows the user to create and manage an individual training plan.
