--- a/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
@@ -33,7 +33,7 @@ Um den Trainingserfolg zu maximieren, wird dem Benutzer empfohlen, sein Profil a
 Mittels Benutzerdaten und dem ausgewählten Trainingsziel, wird ein Plan erstellt, der perfekt auf den User zugeschnitten ist.
 
 \ \\
-Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App wertvolle Ressourcen für Übungen und Tipps bei deren Ausführung. Im Übungskatalog findet man alle Übungen, diese können auch nach Name und Muskelgruppe gefiltert werden.
+Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App wertvolle Ressourcen für Übungen und Tipps bei deren Ausführung. Im Übungskatalog findet man alle Übungen. Diese können auch nach Name und Muskelgruppe gefiltert werden.
 
 \ \\
 Der Benutzer wird von der App durch das Training begleitet. Es werden ihm die Übungen angezeigt, die für diesen Trainingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen, ohne die App verlassen zu müssen.  
@@ -46,10 +46,10 @@ Auf diese Weise kann der Nutzer seine Entwicklung verfolgen.
 
 
 
-
+\newpage
 \section{Abstract}
 As part of the thesis of Daniel Bersenkowitsch, Andreas Denkmayr and Gerald Irsiegler, an Android application is developed, which allows the user to create and manage an individual training plan.
-The expertise around exercises, workout routines and the training plan will be provided by our client and Fitness Consultant David Lindenbauer.
+The expertise around exercises, workout routines and the training plan will be provided by our client and fitness consultant David Lindenbauer.
 
 \ \\
 Currently Fitness laymen need to see a personal trainer or use a fitness plan that is not cut to their needs. This is where our application comes in. FIPLY allows even novice users a simple approach to training. The user can immediately start training and test the app.
@@ -61,7 +61,7 @@ In addition to creating training plans, our app is a valuable resource for exerc
 The exercise catalog includes all available exercises and you can filter them by name or muscle group.
 
 \ \\
-The user is also accompanied during his workout session by showing him the exercises which are scheduled for this day. In addition, it includes a countdown timer and a stopwatch. This way, the user can measure his rest- or training sessions, without leaving the app.
+The user is also accompanied during his workout session by showing him the exercises which are scheduled for this day. In addition, it includes a countdown timer and a stopwatch. This way, the user can measure his rest- or training times, without leaving the app.
 During the training session, the user is accompanied by music that he has stored on his smartphone.
 Playlists can be created with all the songs stored on the device. These can be conveniently selected and played during the training.
 
