--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -8,7 +8,9 @@
 \begin{document}
 \clearscrheadfoot
 \cfoot{\pagemark}
-\maketitle
+
+% KAPITEL DECKBLATT
+\subfile{all_deckblatt}
 
 % KAPITEL ALLGEMEINES
 \newpage
