--- a/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_abstract.tex
@@ -25,15 +25,15 @@
 
 \section{Kurzfassung}
 Im Rahmen der Diplomarbeit von Daniel Bersenkowitsch, Andreas Denkmayr und Gerald Irsiegler, wird eine Android-Applikation entwickelt, die es dem Benutzer ermöglicht, einen individuellen Trainingsplan zu erstellen und zu verwalten.
-Das Fachwissen rund um Übungen, Trainingsroutinen und der Trainingsplanerstellung werden von unserem Auftraggeber und Fitnessconsultant David Lindenbauer bereitgestellt.
+Das Fachwissen rund um Übungen, Trainingsroutinen und der Trainingsplanerstellung werden vom Auftraggeber und Fitnessconsultant David Lindenbauer bereitgestellt.
 
 \ \\
-Derzeit müssen Fitnesslaien einen Personal Trainer aufsuchen oder sich mit einem Fitnessplan begnügen, der nicht auf ihre Bedürfnisse zurechtgeschnitten ist. Genau hier setzt unsere Diplomarbeit an. FIPLY ermöglicht auch unerfahrenen Benutzern einen einfachen Einstieg ins Training. Der Benutzer kann sofort in das Training einsteigen und die App austesten.
+Derzeit müssen Fitnesslaien einen Personal Trainer aufsuchen oder sich mit einem Fitnessplan begnügen, der nicht auf ihre Bedürfnisse zurechtgeschnitten ist. Genau hier setzt diese Applikation an. FIPLY ermöglicht auch unerfahrenen Benutzern einen einfachen Einstieg ins Training. Der Benutzer kann sofort in das Training einsteigen und die App austesten.
 Um den Trainingserfolg zu maximieren, wird dem Benutzer empfohlen, sein Profil an seine Bedürfnisse anzupassen.
 Mittels Benutzerdaten und dem ausgewählten Trainingsziel, wird ein Plan erstellt, der perfekt auf den User zugeschnitten ist.
 
 \ \\
-Zusätzlich zur Erstellung von Trainingsplänen bietet unsere App wertvolle Ressourcen für Übungen und Tipps bei deren Ausführung. Im Übungskatalog findet man alle Übungen. Diese können auch nach Name und Muskelgruppe gefiltert werden.
+Zusätzlich zur Erstellung von Trainingsplänen bietet die App wertvolle Ressourcen für Übungen und Tipps bei deren Ausführung. Im Übungskatalog findet man alle Übungen. Diese können auch nach Name und Muskelgruppe gefiltert werden.
 
 \ \\
 Der Benutzer wird von der App durch das Training begleitet. Es werden ihm die Übungen angezeigt, die für diesen Trainingstag vorgesehen sind. Zusätzlich steht ihm ein Countdowntimer und eine Stoppuhr zur Verfügung. Auf diese Weise kann der Benutzer seine Rast- oder Traingszeiten messen, ohne die App verlassen zu müssen.  
@@ -49,15 +49,15 @@ Auf diese Weise kann der Nutzer seine Entwicklung verfolgen.
 \newpage
 \section{Abstract}
 As part of the thesis of Daniel Bersenkowitsch, Andreas Denkmayr and Gerald Irsiegler, an Android application is developed, which allows the user to create and manage an individual training plan.
-The expertise around exercises, workout routines and the training plan will be provided by our client and fitness consultant David Lindenbauer.
+The expertise around exercises, workout routines and the training plan will be provided by the client and fitness consultant David Lindenbauer.
 
 \ \\
-Currently Fitness laymen need to see a personal trainer or use a fitness plan that is not cut to their needs. This is where our application comes in. FIPLY allows even novice users a simple approach to training. The user can immediately start training and test the app.
+Currently Fitness laymen need to see a personal trainer or use a fitness plan that is not cut to their needs. This is where the application comes in. FIPLY allows even novice users a simple approach to training. The user can immediately start training and test the app.
 To maximize the success of training, the user is encouraged to adapt his user-profile to his needs.
 With the data provided by the user and the selected training goal, a plan is created, which is perfectly tailored to the user.
 
 \ \\
-In addition to creating training plans, our app is a valuable resource for exercises and their execution.
+In addition to creating training plans, the app is a valuable resource for exercises and their execution.
 The exercise catalog includes all available exercises and you can filter them by name or muscle group.
 
 \ \\
