--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_latex.tex
@@ -4,13 +4,13 @@
 %\date{26. Februar 2016}
 
 \begin{document}
-\subsubsection{LaTeX}
+\subsubsection{Beschreibung}
 LaTeX ist ein Softwarepaket, welches TeX implementiert. TeX ist eine `What you mean is what you get` Programmiersprache zur Erzeugung von Textdokumenten. Am besten ist LaTeX geeignet für wissenschaftliche Artikel und Diplom-, Masterarbeiten [\citetitle{lxLatex} \cite{lxLatex}].
 
-\paragraph{MiKTeX}\ \\
+\subsubsection{MiKTeX}\ \\
 MiKTeX ist eine TeX-Distribution für Microsofts Windows-Betriebssysteme. Die ergänzenden MiKTeX Tools wurden ebenso auf GNU/Linux portiert [\citetitle{lxMiktex} \cite{lxMiktex}].
 
-\paragraph{TeXworks}\ \\
+\subsubsection{TeXworks}\ \\
 TeXworks ist ein quelloffenes Anwendungsprogramm für Windows, Unix-Systeme und Mac OS X. Es ist eine graphische Benutzeroberfläche für das Textsatzprogramm TeX und dessen Erweiterungen LaTeX, ConTeXt und XeTeX [\citetitle{lxTexworks} \cite{lxTexworks}].
 
 
