--- a/FIPLY/Dokumente/FIPLY Latex/all_autoren.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/all_autoren.tex
@@ -10,7 +10,8 @@
 	Alle Autoren dieser Diplomarbeit besuchen die 5. Schulstufe des Informatik-Zweiges der HTBLA-Leonding.
 	\ \\
 	\newline\newline
-	{\Large Daniel Bersenkowitsch}
+	{\Large Daniel Bersenkowitsch} \newline
+	Projektleitung, Trainingsplanmanagement, Grafikdesign
 	\ \\
 	\line(1,0){200}
 	\begin{figure}[H]
@@ -31,8 +32,8 @@
 		\end{subfigure}
 	\end{figure}
 	\ \\
-	\ \\
-	{\Large Andreas Denkmayr}
+	{\Large Andreas Denkmayr} \newline
+	Trainingssession, Musik, Navigation
 	\ \\
 	\line(1,0){200}
 	\begin{figure}[H]
@@ -53,8 +54,8 @@
 		\end{subfigure}
 	\end{figure}
 	\ \\
-	\ \\
-	{\Large Gerald Irsiegler}
+	{\Large Gerald Irsiegler} \newline
+	Benutzerverwaltung, Statistik, Übungskatalog 
 	\ \\
 	\line(1,0){200}
 	\begin{figure}[H]
