--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_latex.tex
@@ -17,6 +17,7 @@ Dieser Befehl verlinkt auf die \verb!denkmayr_GitHub.tex! Datei, die sich im sel
 Die Subfiles müssen \verb!\documentclass[FIPLY_base.tex]{subfiles}! in ihrem Header definieren.
 Wird eine PDF aus dem FIPLY\_base.tex Dokument generiert, wird der Inhalt aller angeführten Subfiles in das Basisdokument eingefügt.
 
+\newpage
 \subsubsection{Quellen und Zitate}
 Quellen und Zitierungen werden mithilfe des Biblatex Packages durchgeführt.
 Für die verschiedenen Quellen werden Einträge in der literatur.bib Datei erstellt.
