--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_User.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_User.tex
@@ -23,13 +23,12 @@ Weiters kann er sich hier über den Facebook-Login-Button mit seinem Facebook Ac
 \begin{figure}[H]
 	\begin{subfigure}[b]{0.5\textwidth}
 		\includegraphics[scale=0.5]{img/User_step1}
-		\caption{Der erste Schritt der Benutzererstellung.}
 	\end{subfigure}
 	\hfil
 	\begin{subfigure}[b]{0.6\textwidth}
 		\includegraphics[scale=0.53]{img/User_facebooklogin}
-		\caption{Der Loginscreen von Facebook.}
 	\end{subfigure}
+	\caption{Der erste Schritt der Benutzererstellung und der Loginscreen von Facebook.}
 \end{figure}
 \paragraph{Schritt 2}\ \\
 Im zweiten Schritt gibt der Benutzer seine Körpergröße in Zentimetern (cm) und sein Gewicht in Kilogramm (kg) an.
