--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -636,7 +636,7 @@
   \"Name\":\"Rückenstabilisation\",
   \"Beschreibung\":\"Auf Händen und Knien am Boden/Matte/Handtuch abstützen (=Bankstellung). Arme und Beine dabei etwa schulterbreit und im 90 Grad Winkel zum Oberkörper. Auf geraden und stabilen Rücken achten.\",
   \"Durchführung\":\"Winkel im Knie beibehalten und abwechselnd ein Bein anheben bis Oberschenkel Linie sind und wieder in Grundstellung zurückkehren -> Beinwechsel.\",
-  \"Equipment\":\"Mappe\",
+  \"Equipment\":\"Matte\",
   \"Schwierigkeit\":\"Einfach\"
 },
 {
@@ -644,7 +644,7 @@
   \"Name\":\"Hüftheber\",
   \"Beschreibung\":\"Rücklings auf Boden/Matte/Handtuch legen und Hohlkreuz vermeiden. Arme parallel zum Körper als Stütze ablegen. 90 Grad Winkel in den Knien halten (fortgeschritten -> Beine ausstrecken).\",
   \"Durchführung\":\"Hüfte vom Boden anheben und wieder absenken; dabei stets gesamten Rumpf unter Spannung halten.\",
-  \"Equipment\":\"Mappe\",
+  \"Equipment\":\"Matte\",
   \"Schwierigkeit\":\"Einfach\"
 },
 {
@@ -652,7 +652,7 @@
   \"Name\":\"Beinpendel\",
   \"Beschreibung\":\"Rücklings auf Boden/Matte/Handtuch legen und Hohlkreuz vermeiden. Arme im 90 Grad Winkel zum Oberkörper als Stütze ablegen und Beine ausstrecken (90 Grad im Hüftgelenk) Durchführung.\",
   \"Durchführung\":\"Beine zuerst langsam zu einer Seite – dann zur Grundstellung – und zur anderen Seite abwinkeln (bis ca. 45 Grad Winkel zwischen Boden und Grundstellung).\",
-  \"Equipment\":\"Mappe\",
+  \"Equipment\":\"Matte\",
   \"Schwierigkeit\":\"Einfach\"
 },
 {
@@ -660,7 +660,7 @@
   \"Name\":\"Seitliches Hüftheben\",
   \"Beschreibung\":\"Seitstützposition (side plank) einnehmen (am Unterarm abstützen).\",
   \"Durchführung\":\"Becken absenken und wieder anheben.\",
-  \"Equipment\":\"Mappe\",
+  \"Equipment\":\"Matte\",
   \"Schwierigkeit\":\"Einfach\"
 },
 {
@@ -668,7 +668,7 @@
   \"Name\":\"Trockenschwimmen\",
   \"Beschreibung\":\"Bäuchlings auf Boden/Matte/Handtuch hinlegen. Hohlkreuz einnehmen und leichte Gewichte nehmen (Hanteln, Wasserflasche, Handtuch,...). Beine gestreckt und geschlossen vom Körper abheben; Arme im 90 Grad Winkel(zum Oberkörper und im Ellenbogen) halten\",
   \"Durchführung\":\"Arme ausstrecken und Beine spreizen\",
-  \"Equipment\":\"Mappe\",
+  \"Equipment\":\"Matte\",
   \"Schwierigkeit\":\"Einfach\"
 },
 {
@@ -676,8 +676,18 @@
   \"Name\":\"Rückenstrecker am Gymnastikball\",
   \"Beschreibung\":\"Bäuchlings auf eine Gymnastikball legen, Knie sind am Boden und Beine angewinkelt. Arme im 90 Grad Winkel(zum Oberkörper und im Ellenbogen) halten.\",
   \"Durchführung\":\"Oberkörper absenken und wieder anheben; Arme dabei stets im gleichen Winkel halten.\",
-  \"Equipment\":\"Mappe\",
+  \"Equipment\":\"Matte\",
   \"Schwierigkeit\":\"Einfach\"
+},
+      {
+  \"Muskelgruppe\":\"Arme, Oberkörper\",
+  \"Name\":\"Liegestütze\",
+  \"Beschreibung\":\"Auf den Bauch legen und mit dem Fußballen die Beine auf dem Boden abstützen. Handflächen nach vorne auf den Boden legen.\",
+  \"Durchführung\":\"Oberkörper mittels Armbewegung nach oben heben ohne dabei die Arme ganz durchzustrecken. Bewegung wieder rückführen bis die Armebeuge einen rechten Winkel bildet.\",
+  \"Equipment\":\"Mappe\",
+  \"Schwierigkeit\":\"Einfach\",
+  \"Video\":\"https://www.youtube.com/watch?v=b33faUxJP5I\"
+
 }
 ]
 </string>
