--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -694,7 +694,7 @@
     <string name="titleplanmanagement">Trainingsplan Management</string>
     <string name="NoSongsFound">Keine Songs gefunden</string>
     <string name="AbovePlaylistManagement">Bitte wählen sie eine Playlist aus die sie bearbeiten wollen</string>
-    <string name="AboveSongManagement">Bitte kreuzen sie alle Songs an die sie in ihre Playlist speichen möchten</string>
+    <string name="AboveSongManagement">Bitte kreuzen sie alle Songs an die sie in ihre Playlist speichern möchten</string>
     <string name="tvSettingsMusic">Wenn sie Musik einlesen, können sie Playlisten erstellen und während dem Trainieren Musik hören</string>
     <string name="btSettingsMusic">Musik Erlaubnis abfragen</string>
     <string name="btSettingsCheckPermissions">Unsere App benötigt deine Erlaubnis um Musik abzuspielen</string>
