--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_SellApp.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_SellApp.tex
@@ -4,7 +4,7 @@
 %\date{26. Februar 2016}
 
 \begin{document}
-\subsection{Die App verkaufen}
+\subsection{Verkaufen der App}
 
 
 \subsubsection{Beschreibung}
