--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -686,7 +686,7 @@
   \"Durchführung\":\"Oberkörper mittels Armbewegung nach oben heben ohne dabei die Arme ganz durchzustrecken. Bewegung wieder rückführen bis die Armebeuge einen rechten Winkel bildet.\",
   \"Equipment\":\"Mappe\",
   \"Schwierigkeit\":\"Einfach\",
-  \"Video\":\"https://www.youtube.com/watch?v=b33faUxJP5I\"
+  \"Video\":\"https://www.youtube.com/embed/b33faUxJP5I"
 
 }
 ]
