--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -708,4 +708,5 @@
     <string name="deleteplanquastion">Bitte bestätigen Sie das Löschen des Trainingsplans</string>
     <string name="delete">Löschen</string>
     <string name="cancel">Abbrechen</string>
+    <string name="alertnotchosen">Bitte wählen sie einen Trainingsplan in dem Trainingsplanmenü aus!</string>
 </resources>
