--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -709,4 +709,5 @@
     <string name="delete">Löschen</string>
     <string name="cancel">Abbrechen</string>
     <string name="alertnotchosen">Bitte wählen sie einen Trainingsplan in dem Trainingsplanmenü aus!</string>
+    <string name="manageReset">Reset the app</string>
 </resources>
